theme/styles/global.scss
//* Global Padding */
.site-padding-x {
  padding-left: $site-padding-x-mobile;
  padding-right: $site-padding-x-mobile;

  @include media('md-up') {
    padding-left: $site-padding-x-desktop;
    padding-right: $site-padding-x-desktop;
  }
}

.magic-mouse {
  width: 10px;
  height: 10px;
  position: absolute;
  background: color('black');
  border-radius: 999px;
}

.site-margin-x {
  margin-left: $site-padding-x-mobile;
  margin-right: $site-padding-x-mobile;

  @include media('md-up') {
    margin-left: $site-padding-x-desktop;
    margin-right: $site-padding-x-desktop;
  }
}

/* Global site border and offset for Nav height */
body {
  border: solid $site-border color('white');
  padding-top: $nav-height;

  @include media('md-up') {
    padding-top: $nav-height-md;
  }

  @include media('lg-xl-up') {
    padding-top: $nav-height-lg-xl;
  }
}

//* Borders */
.border-white {
  border: 1px solid color('white');
}

.border-thick-top-white {
  border-top: 2px solid color('white');
}

.border-thick-bottom-white {
  border-bottom: 2px solid color('white');
}

.border-black {
  border: 1px solid color('black');
}

.border-thick-black {
  border: 2px solid color('black');
}

.border-top-black {
  border-top: 1px solid color('black');
}

.border-left-black {
  border-left: 1px solid color('black');
}

.border-right-black {
  border-right: 1px solid color('black');
}

.border-bottom-black {
  border-bottom: 1px solid color('black');
}

.border-thick-top-black {
  border-top: 2px solid color('black');
}

.border-bottom-black {
  border-bottom: 1px solid color('black');
}

.border-thick-bottom-black {
  border-bottom: 2px solid color('black');
}

.bulleted {
  &::before {
    content: "●";
    margin-right: 0.25em;
  }
}

//* Product Grid */
.grid {
  display: grid;
  gap: 0.125rem;
  grid-template-columns: 1fr;

  @include media('sm-up') {
    grid-template-columns: repeat(2, 1fr);
  }

  @include media('md-up') {
    grid-template-columns: repeat(3, 1fr);
  }

  &--style-padding-x-0 {
    padding-left: 0;
    padding-right: 0;
  }

  &--style-first-cell-enlarged {
    @include media('lg-up') {
      > :first-child {
        grid-column: 1/3;
        grid-row: 1/3;

        .ProductGridItem__image {
          min-height: 31.25rem;
        }
      }
    }
  }
}

.hyphens {
  hyphens: auto;
}

.nav-button-padding {
  padding: 0.1875rem 0.1875rem 0.05rem 0.1875rem;

  @include media('md-up') {
    padding: 0.25rem 0.25rem 0.1rem 0.25rem;
  }

  &--lowercase {
    padding: 0.05rem 0.1875rem 0.1875rem 0.1875rem;

    @include media('md-up') {
      padding: 0.1rem 0.25rem 0.5rem 0.25rem;
    }
  }
}

/* To crop line height spacing for the primary buttons */
@mixin lhCrop($line-height) {
  &::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc((1 - #{$line-height}) * 0.5em);
  }

  &::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: (calc((1 - #{$line-height}) * 0.5em));
  }
}

.text-to-crop {
  @include lhCrop(1.1); //line-height: 1.1
}

@mixin not-on-touch-devices {
  @media (hover: hover) {
    @content;
  }
}

.page-heading {
  padding: 0.75rem 0 6.25rem 0;
}

body {
  transition: opacity 750ms $transition-easing;
  opacity: 0;

  &.fade-in {
    opacity: 1;
  };
}

html {
  scroll-behavior: smooth;
}

